@@ -1,3 +1,7 @@
+2007-01-23  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/diskfile.c: Check duplicate DLE with match_host and
+				 match_disk.
+
 2007-01-18  Jean-Louis Martineau <martineau@zmanda.com>
 	* client-src/selfcheck.c: Improve check if /etc/dumpdates in not there.
 
